Added sameple files to the playbooks folder

--- a/playbooks/1.nginx/0-samplefile.yml
+++ b/playbooks/1.nginx/0-samplefile.yml
@@ -1,7 +1,7 @@
 ---
 - name: Playbook to install generic tools
   hosts: pvt
-  gather_facs: yes
+  gather_facts: yes
   become: yes
   become_user: root
   vars:
