Changed the ubuntu version from 20 to 24.04

--- a/playbooks/1.nginx/2.nginx-remote.yml
+++ b/playbooks/1.nginx/2.nginx-remote.yml
@@ -1,6 +1,6 @@
 ---
 - name: Play for Install Nginx on WebServers
-  hosts: pvt:!testserver01
+  hosts: pvt
   gather_facts: yes
   become: yes
   become_user: root
