--- a/playbooks/4.vault/vault_testing.yml
+++ b/playbooks/4.vault/vault_testing.yml
@@ -80,21 +80,21 @@
         backup: yes
       notify:
         - Restart SSH Service
-    - name: Install Elastic Agent
-      shell: |
-        curl -L -O https://artifacts.elastic.co/downloads/beats/elastic-agent/elastic-agent-8.10.4-linux-x86_64.tar.gz
-        tar xzvf elastic-agent-8.10.4-linux-x86_64.tar.gz
-        cd elastic-agent-8.10.4-linux-x86_64
-        sudo ./elastic-agent install --url=https://ee71b9fe333346e0ac91f0529680a324.fleet.us-east-1.aws.found.io:443 --enrollment-token={{ elastic_password }}
-    - name: Copy Encrypted /tmp/heartbeat.yml File To /etc/heartbeat/ folder
-      copy:
-        src: /tmp/heartbeat.yml #This Encrypted File Must Be Created Prior To Running The Playbook.
-        dest: /etc/heartbeat/heartbeat.yml
-        owner: root
-        group: root
-        mode: "0600"
-      notify:
-        - Restart elastic-agent
+    # - name: Install Elastic Agent
+    #   shell: |
+    #     curl -L -O https://artifacts.elastic.co/downloads/beats/elastic-agent/elastic-agent-8.10.4-linux-x86_64.tar.gz
+    #     tar xzvf elastic-agent-8.10.4-linux-x86_64.tar.gz
+    #     cd elastic-agent-8.10.4-linux-x86_64
+    #     sudo ./elastic-agent install --url=https://ee71b9fe333346e0ac91f0529680a324.fleet.us-east-1.aws.found.io:443 --enrollment-token={{ elastic_password }}
+    # - name: Copy Encrypted /tmp/heartbeat.yml File To /etc/heartbeat/ folder
+    #   copy:
+    #     src: /tmp/heartbeat.yml #This Encrypted File Must Be Created Prior To Running The Playbook.
+    #     dest: /etc/heartbeat/heartbeat.yml
+    #     owner: root
+    #     group: root
+    #     mode: "0600"
+    #   notify:
+    #     - Restart elastic-agent
   handlers:
     - name: Restart SSH Service
       shell: service sshd restart
