addd redis file

--- a/playbooks/2.Redis/Redis.yml
+++ b/playbooks/2.Redis/Redis.yml
@@ -33,7 +33,7 @@
 
     - name: Compile and install Redis #
       shell: |
-        # cd /tmp/redis-6.2.5 
+        cd /tmp/redis-6.2.5 
         make
         make install
       args:
