--- a/playbooks/2.Redis/Redis.yml
+++ b/playbooks/2.Redis/Redis.yml
@@ -7,41 +7,42 @@
       apt:
         name: "{{ item }}"
         state: present
-      loop: #YOU CAN WITH_ITEMS ALSO
-        - build-essential #THESE ARE TWO PACKAGES TO BE INSTALLED.
+      loop:
+        - build-essential
         - tcl
-      when: ansible_distribution == 'Ubuntu' and ansible_distribution_version == '20.04' #UNLESS THIS NOT MATCHING THE ABOVE WILL NOT BE INSTALLED
+      when: ansible_distribution == 'Ubuntu' and ansible_distribution_version == '20.04'
 
-    - name: Check Redis Status #CHECKING THE STATUS
+    - name: Check Redis Status
       shell: systemctl status redis --no-pager
-      register: redis_status # we are going to use the systemctl output as register: redis status and We are ignoring.
+      register: redis_status
       ignore_errors: true
 
     - name: Download and extract Redis source code
       get_url:
         url: "http://download.redis.io/releases/redis-6.2.5.tar.gz"
         dest: "/tmp/redis.tar.gz"
-      #delegate_to: localhost
       when: redis_status.rc != 0
 
     - name: Extract Redis source code
       unarchive:
         src: "/tmp/redis.tar.gz"
         dest: "/tmp"
-        remote_src: yes #IF YOU ARE NOT GIVING REMOTE_SORUCE: YES --> ITS GOING TO CHECKIN LOCAL
+        remote_src: yes
       when: redis_status.rc != 0
 
-    - name: Ensure build dependencies are installed
-      ansible.builtin.yum:
+    - name: Ensure build dependencies are installed on RedHat-based systems
+      yum:
         name: make, gcc
         state: present
       when: ansible_os_family == "RedHat"
 
-    - name: Ensure build dependencies are installed
-      ansible.builtin.apt:
-        name: make, gcc
+    - name: Ensure build dependencies are installed on Debian-based systems
+      apt:
+        name:
+          - make
+          - gcc
         state: present
-      when: ansible_os_family == "Deb
+      when: ansible_os_family == "Debian"
 
     - name: Compile and install Redis
       shell: |
@@ -51,15 +52,6 @@
         executable: /bin/bash
       when: redis_status.rc != 0
 
-    # - name: Compile and install Redis #
-    #   shell: |
-    #     cd /tmp/redis-6.2.5
-    #     make install
-    #   args:
-    #     executable: /bin/bash
-    #   when: redis_status.rc != 0
-    #   #WE ARE GOING INTO THIS FODLER AND INSTALLING MAKE AND WE ARE EXECUTING ALL COMMANDS IN BIN/BASH
-
     - name: Configure Redis
       copy:
         src: redis.conf
@@ -67,8 +59,7 @@
         owner: root
         group: root
         mode: "0644"
-      #when: redis_status.rc != 0
-      notify: #THESE WERE CALLED AS HANDLERS.
+      notify:
         - Restart Redis
         - Backup Redis Conf File
         - Download Redis Backup Config File Flat
@@ -81,7 +72,6 @@
         owner: root
         group: root
         mode: "0644"
-      #when: redis_status.rc != 0
       notify:
         - Restart Redis
         - Backup Redis Conf File
@@ -93,13 +83,13 @@
         enabled: yes
       when: redis_status.rc != 0
 
-    - name: Checking Deligate Option
+    - name: Checking Delegate Option
       shell: hostname
-      delegate_to: localhost #or 127.0.0.1
+      delegate_to: localhost
 
   handlers:
     - name: Backup Redis Conf File
-      shell: rm -rf /tmp/redis.conf_backup && cp /etc/redis.conf /tmp/redis.conf_backup #WE ARE TAKING THE BACKUP OF THE CONFIG FILE
+      shell: rm -rf /tmp/redis.conf_backup && cp /etc/redis.conf /tmp/redis.conf_backup
 
     - name: Restart Redis
       systemd:
@@ -111,8 +101,8 @@
         src: /tmp/redis.conf_backup
         dest: /tmp/redis.conf_backup-{{ inventory_hostname }}
         flat: yes
-    - name: Download Redis Backup Config File Without Flat #We are downloading the config file to the Local Location.
+
+    - name: Download Redis Backup Config File Without Flat
       fetch:
         src: /tmp/redis.conf_backup
         dest: /tmp/
-        #flat: yes  #This will download whole path of the file.
