--- a/playbooks/2.Redis/Ansible_Facts_Redis.yml
+++ b/playbooks/2.Redis/Ansible_Facts_Redis.yml
@@ -42,7 +42,7 @@ nano /etc/ansible/ansible.cfg
 gathering = smart
 fact_caching_timeout = 86400
 fact_caching = redis
-fact_caching_prefix = ansible_b22_facts_
+fact_caching_prefix = ansible_DevSecOps
 fact_caching_connection = ansibleredis:6379:0
 
 docker run --rm -dit  -p 6379:6379 --network ansible_nw --name ansibleredis redis
