added block code

--- a/playbooks/4.vault/vault_testing.yml
+++ b/playbooks/4.vault/vault_testing.yml
@@ -57,6 +57,18 @@
     - name: Print VPC ID
       debug:
         var: vpcs
+
+    - name: Install Python passlib module
+      ansible.builtin.pip:
+        name: passlib
+      become: true
+
+    - name: Ensure pip is installed
+      ansible.builtin.package:
+        name: python3-pip
+        state: present
+      become: true
+
     - name: Creating admin "{{item}}"
       user:
         name: "{{item}}"
