--- a/playbooks/4.vault/vault_testing.yml
+++ b/playbooks/4.vault/vault_testing.yml
@@ -57,6 +57,14 @@
     - name: Print VPC ID
       debug:
         var: vpcs
+    - name: Install passlib
+      hosts: all
+      become: yes
+      tasks:
+        - name: Install passlib
+          pip:
+            name: passlib
+            state: present
     - name: Creating admin "{{item}}"
       user:
         name: "{{item}}"
