--- a/playbooks/4.vault/vault_testing.yml
+++ b/playbooks/4.vault/vault_testing.yml
@@ -1,3 +1,5 @@
+#ansible-playbook -i invfile Playbooks/vault_testing.yml -vv --ask-vault-pass
+---
 - name: Run AWS Cli Commands On All Servers
   hosts: pvt
   gather_facts: yes
@@ -7,11 +9,11 @@
   vars:
     user_password: !vault |
       $ANSIBLE_VAULT;1.1;AES256
-      35633433613537393634643130343662643862376530623830373865366638646430383032633463
-      6136343561646663623432306565386266383763626261310a323737616565363935633062346536
-      38363439623938336534623331663236646135626436663962316632663332656662646431663336
-      6265353764313339300a396136323631343937393730363739623637343636336631356135326230
-      6439
+      66343238646264636139643561616132306363323138643735633762323661373233666430663164
+      3237323232653865646130343937306532633864663961350a383364386237396135333335373863
+      33393261613665303730613461393362383261333830333834353931323630653335326161633536
+      6363323464316265360a653961663935613639663264366664323236373438313861383932626336
+      6666
   tasks:
     - name: Create .aws folder
       shell: mkdir -p /root/.aws
@@ -46,14 +48,12 @@
     - name: Print VPC ID
       debug:
         var: vpcs
-    - name: Install passlib
-      hosts: all
+    - name: Ensure passlib is installed
+      ansible.builtin.pip:
+        name: passlib
+        state: present
       become: yes
-      tasks:
-        - name: Install passlib
-          pip:
-            name: passlib
-            state: present
+
     - name: Creating admin "{{item}}"
       user:
         name: "{{item}}"
