--- a/playbooks/2.Redis/Redis.yml
+++ b/playbooks/2.Redis/Redis.yml
@@ -1,6 +1,6 @@
 ---
 - name: Install Redis Server
-  hosts: pvt
+  hosts: testserver01
   become: true
   tasks:
     - name: Install Redis dependencies
