added all required file

--- a/playbooks/5.Jinja/nginx-jinja2.yml
+++ b/playbooks/5.Jinja/nginx-jinja2.yml
@@ -16,7 +16,7 @@
     fqdn_name: "{{ ansible_facts['fqdn'] }}"
     os_family: "{{ ansible_facts['distribution'] }}"
     os_dest: "{{ ansible_facts['distribution_version'] }}"
-    ip_address: "{{ ansible_facts['eth0']['ipv4']['address'] }}"
+    # ip_address: "{{ ansible_facts['eth0']['ipv4']['address'] }}"
   tags:
     - InstallNginx
   tasks:
