--- a/playbooks/5.Jinja/nginx-jinja2.yml
+++ b/playbooks/5.Jinja/nginx-jinja2.yml
@@ -6,10 +6,9 @@
   become_user: root
   vars:
     #Static Variables
-    custom_heading: "Welcome To DevSecOps B37 Batch Training By Sreeharsha Veerapalli"
+    custom_heading: "Welcome To DevSecOps By Saikiran Pinapathruni"
     custom_para: "We Are Studying Ansible Templates Practically..!!!"
-    aws_account: "721834156908"
-    friends: ["Sree", "Harsha", "Raju", "Kumar", "Eswar", "David"]
+    aws_account: "211125710812"
     #Dynamic variables from Ansible Facts
     todays_date: "{{ ansible_facts['date_time']['date'] }}"
     host_name: "{{ ansible_facts['hostname'] }}"
