added all required file

--- a/playbooks/5.Jinja/nginx-jinja2.yml
+++ b/playbooks/5.Jinja/nginx-jinja2.yml
@@ -9,12 +9,12 @@
     custom_heading: "Welcome To DevSecOps By Saikiran Pinapathruni"
     custom_para: "We Are Studying Ansible Templates Practically..!!!"
     aws_account: "211125710812"
-    #Dynamic variables from Ansible Facts
-    todays_date: "{{ ansible_facts['date_time']['date'] }}"
-    host_name: "{{ ansible_facts['hostname'] }}"
-    fqdn_name: "{{ ansible_facts['fqdn'] }}"
-    os_family: "{{ ansible_facts['distribution'] }}"
-    os_dest: "{{ ansible_facts['distribution_version'] }}"
+    # #Dynamic variables from Ansible Facts
+    # todays_date: "{{ ansible_facts['date_time']['date'] }}"
+    # host_name: "{{ ansible_facts['hostname'] }}"
+    # fqdn_name: "{{ ansible_facts['fqdn'] }}"
+    # os_family: "{{ ansible_facts['distribution'] }}"
+    # os_dest: "{{ ansible_facts['distribution_version'] }}"
     # ip_address: "{{ ansible_facts['eth0']['ipv4']['address'] }}"
   tags:
     - InstallNginx
