added jinja files to the repo

--- a/playbooks/5.Jinja/nginx-jinja2.yml
+++ b/playbooks/5.Jinja/nginx-jinja2.yml
@@ -10,7 +10,7 @@
     custom_para: "We Are Studying Ansible Templates Practically..!!!"
     aws_account: "211125710812"
     # #Dynamic variables from Ansible Facts
-    # todays_date: "{{ ansible_facts['date_time']['date'] }}"
+    todays_date: "{{ ansible_facts['date_time']['date'] }}"
     # host_name: "{{ ansible_facts['hostname'] }}"
     # fqdn_name: "{{ ansible_facts['fqdn'] }}"
     # os_family: "{{ ansible_facts['distribution'] }}"
